Improve Globe and related components
- Added multiple origins and destinations support
- Upgraded airports trail, respawn and opacity fade
